--- a/index.css
+++ b/index.css
@@ -1,3 +1,14 @@
 .jumbotron {
   text-align: center;
 }
+
+.myContainer {
+  margin: auto;
+  height: 200px;
+  width: 606px;
+}
+
+.myBtn {
+  height: 36px;
+  width: 79px;
+}
